# order-supervisor

./: .gitignore  README.md  docker-compose.yml  plan.md
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py  schema.sql  temporal_client.py
backend/app/api/: runs.py  supervisors.py
backend/app/supervisors/: templates.py
backend/scripts/: seed.py  simulate.py
backend/tests/: test_workflow.py
backend/worker/: activities.py  worker.py  workflows.py
backend/worker/agent/: prompts.py  runtime.py  tools.py
backend/worker/agent/llm/: base.py  factory.py  groq_provider.py
backend/worker/shared/: types.py
frontend/: next.config.js  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/runs/[id]/: page.tsx
frontend/app/supervisors/: page.tsx
frontend/components/: Badge.tsx
frontend/lib/: api.ts
