[project]
name = "order-supervisor-backend"
version = "0.1.0"
description = "Long-running AI order supervisor on Temporal"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "temporalio>=1.9",
    "asyncpg>=0.30",
    "groq>=0.13",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pydantic>=2.9",
]

[project.optional-dependencies]
test = ["pytest>=8.3", "pytest-asyncio>=0.24"]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
